# cgeom

./: .gitignore  .gitmodules  BUILDING_WINDOWS.md  CMakeLists.txt  DISTRIBUTION_NOTES.md  README.md  cgeom.cc  cgeom.h
.claude/: settings.json
build-codex-check/: CMakeCache.txt
cgeomGH/CGeom/: CGeom.sln
cgeomGH/CGeom/CGeomGH/: CGeomGH.csproj  LaplacianSmoothingGH.cs  libcgeom.dylib
cgeomGH/CGeom/CGeomGH/DiscreteQuantities/: PerVertexNormalsGH.cs  PrincipalCurvaturesGH.cs
cgeomGH/CGeom/CGeomGH/Parameterization/: DeconstructNRosyGH.cs  IntGridParam.cs  NRosyGH.cs  QuadMeshExtractionGH.cs  SeamlessIntegerGH.cs
cgeomGH/CGeom/CGeomGH/ParameterizationGH/: DeconstructNRosyGH.cs  HarmonicGH.cs  NRosyGH.cs  QuadMeshExtractionGH.cs  SeamlessIntegerGH.cs
cgeomGH/CGeom/CGeomGH/ParametrizationGH/: BffGH.cs  DeconstructNRosyGH.cs  HarmonicGH.cs  LeastSquaresConformalMapsGH.cs  NRosyGH.cs  QuadMeshExtractionGH.cs  SeamlessIntegerGH.cs
cgeomGH/CGeom/CGeomGH/Processing/: LaplacianForCloseMeshGH.cs  LaplacianForOpenMeshGH.cs  PlanarizationGH.cs  RotateVectorsGH.cs
cgeomGH/CGeom/CGeomGH/ProcessingGH/: DijkstraPathGH.cs  EdgeVectorsGH.cs  FlipGeodesicsGH.cs  InstantMeshesRemeshGH.cs  LaplacianForCloseMeshGH.cs  LaplacianForOpenMeshGH.cs  ParallelTransportGH.cs  PlanarizationGH.cs  RemeshAlongCurvatureGH.cs  RemeshAlongIsolinesGH.cs  RepulsivePointsGH.cs  RotateVectorsGH.cs
cgeomGH/CGeom/CGeomGH/Properties/Resources/: Resources.Designer.cs  Resources.resx
cgeomGH/CGeom/CGeomGH/Quantities/: BarycentersGH.cs  GaussianCurvatureGH.cs  LocalBasisGH.cs  MeanCurvatureGH.cs  PerCornerNormalsGH.cs  PerFaceAsymptoticDirectionsGH.cs  PerFaceNormalsGH.cs  PerFacePrincipalCurvaturesGH.cs  PerVertexAsymptoticDirectionsGH.cs  PerVertexNormalsGH.cs  PerVertexPrincipalCurvaturesGH.cs  PrincipalCurvaturesGH.cs
cgeomGH/CGeom/CGeomGH/QuantitiesGH/: BarycentersGH.cs  CurvaturesGH.cs  ExactGeodesicDistancesGH.cs  GaussianCurvatureGH.cs  GeodesicPathsGH.cs  HeatGeodesicsGH.cs  LocalBasisGH.cs  MeanCurvatureGH.cs  PerCornerNormalsGH.cs  PerFaceAsymptoticDirectionsGH.cs  PerFaceNormalsGH.cs  PerFacePrincipalCurvaturesGH.cs  PerVertexAsymptoticDirectionsGH.cs  PerVertexNormalsGH.cs  PerVertexPrincipalCurvaturesGH.cs
cgeomGH/CGeom/CGeomGH/Utils/: DropDownAttributesGH.cs
cgeomGH/CGeom/CGeomLib/: CGeomLib.csproj
cgeomGH/CGeom/CGeomLib/Properties/: AssemblyInfo.cs
cgeomGH/CGeom/CGeomLib/Tools/: Bff.cs  DiscreteOperators.cs  DiscreteQuantities.cs  Helper.cs  NRosy.cs  Parameterizations.cs  Parametrizations.cs  Processing.cs  Utils.cs
cgeomGH/CGeom/CGeomLib/Utils/: ColorMaps.cs  MetricsVisualization.cs
cgeomGH/CGeom/CGeomLib/Wrappers/: Kernel.BFF.cs  Kernel.DiscreteQuantities.cs  Kernel.GeometryCentral.cs  Kernel.Parameterization.cs  Kernel.Processing.cs  Kernel.cs
cmake/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeDoxygenDefaults.cmake  CPackConfig.cmake  CPackSourceConfig.cmake  FindLIBIGL.cmake  FindOpenMesh.cmake  build.ninja  cmake_install.cmake  instant-meshes.cmake
cmake/CoMISo/: cmake_install.cmake
cmake/dependencies/OpenMesh/: cmake_install.cmake
cmake/dependencies/OpenMesh/Doc/: cmake_install.cmake  doxy.config
cmake/dependencies/OpenMesh/src/OpenMesh/Apps/: cmake_install.cmake
cmake/dependencies/OpenMesh/src/OpenMesh/Core/: cmake_install.cmake
cmake/dependencies/OpenMesh/src/OpenMesh/Tools/: cmake_install.cmake
cmake/dependencies/libQEx/: cmake_install.cmake
cmake/dependencies/libQEx/demo/cmdline_tool/: cmake_install.cmake  cmdline_tool
cmake/dependencies/libQEx/demo/minimal_c/: cmake_install.cmake  demo_minimal_c
cmake/dependencies/libQEx/doc/: Doxyfile
cmake/src/: cmake_install.cmake
demos/: 20210526_AssymptoticTower.gh  AsymptoticNetworks_Tracing.gh  AsymptoticNetworks_Tracing_Surfaces.gh  AsymptoticNetworks_Tracing_Surfaces01.gh  CGeomTest.gh  CGeom_Test.gh  Elastica.gh  Test01.gh  TestRodLinkage.gh  Test_ElasticPlates.gh  Test_miq.gh  cgeom_edgeVectors.gh  cgeom_geodesicDistances.gh  cgeom_geodesicPaths.gh  cgeom_heatGeodesicDistances.gh  cgeom_parallelTransport.gh  cgeom_remeshAlongIsolines.gh  gauss_crv.ipynb
demos/AssymptoticLines/: 160930_CurvatureLineScripts.gh  20210503_Curvatures.gh  Hypar_base.3dm  NormalLamella01_GH.txt  PrincipalCurvatures_HyparBase.ghx  Tut_NonLinear_Arch.txt  out.err
dependencies/OpenMesh/include/OpenMesh/Apps/Decimating/: DecimaterViewerWidget.cc  decimater.cc
dependencies/OpenMesh/include/OpenMesh/Apps/Dualizer/: dualizer.cc
dependencies/OpenMesh/include/OpenMesh/Apps/ProgViewer/: ProgViewerWidget.cc  ProgViewerWidget.hh
dependencies/OpenMesh/include/OpenMesh/Apps/QtViewer/: QGLViewerWidget.cc
dependencies/OpenMesh/include/OpenMesh/Apps/Subdivider/: SubdivideWidget.hh  qtsubdivider.cc  subdivider.cc
dependencies/OpenMesh/include/OpenMesh/Core/Geometry/: MathDefs.hh
dependencies/OpenMesh/include/OpenMesh/Core/IO/: BinaryHelper.hh  IOInstances.hh  IOManager.cc  MeshIO.hh  OMFormatT.cc  SR_rbo.hh  SR_store.hh
dependencies/OpenMesh/include/OpenMesh/Core/Mesh/: ArrayItems.hh  ArrayKernel.cc  AttribKernelT.hh  BaseKernel.cc  BaseMesh.hh  CirculatorsT.hh  PolyConnectivity.hh  PolyMeshT.cc  PolyMesh_ArrayKernelT.hh  Traits.hh  TriConnectivity.cc  TriConnectivity.hh  TriMeshT.cc
dependencies/OpenMesh/include/OpenMesh/Core/System/: compiler.hh  config.hh  mostream.hh
dependencies/OpenMesh/include/OpenMesh/Core/Templates/: newClass.hh  newClassT.hh
dependencies/OpenMesh_3_0/lib/: libOpenMeshCored.dylib  libOpenMeshToolsd.3.0.dylib
dependencies/QEx/lib/: libQEx.dylib
examples/: cgeom_asymptoticNetwork.gh  cgeom_laplacianSmoothing.gh
gh_src/CGeom/CGeomGH/: AssemblyInfo.cs  CGeomGHInfo.cs  PrincipalCurvaturesGH.cs
gh_src/CGeom/CGeomLib/: packages.config
gh_src/CGeom/CGeomLib/Tools/: Analysis.cs
scripts/: package-windows-dist.ps1
src/: CMakeLists.txt  bff.cc  bff.h  directional  discrete_quantities.cc  discrete_quantities.h  instant_meshes_wrapper.cc  instant_meshes_wrapper.h  parameterizations.cc  parameterizations.h  processing.cc  processing.h  remeshing.cc  remeshing.h
(+214 files in other folders)
